# gowa-sdk-multibot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  endpoint.device.txt  example_bot.py  main-app.py  main.py  requirements.txt
automation-core/: pyproject.toml
automation-core-rust/automation_core_root_layout/: .env.example  Cargo.toml
automation-core/automation_core/: __init__.py  client.py  events.py  gowa_api.py  gowa_client.py  message.py  redis_pubsub.py  redis_stream.py  settings.py  whatsapp_api.py
services/: input_data_transfer.py
utils/: number_parser.py  redis_connect.py  spreadsheet_connect.py  timestamp_parser.py
